add_subdirectory(App)
add_subdirectory(ApplicationServer)
add_subdirectory(DataTranslation)
add_subdirectory(DeviceControl)
add_subdirectory(GUI)
add_subdirectory(Kernel)
add_subdirectory(Math)
add_subdirectory(Process)
add_subdirectory(Ptr)
add_subdirectory(SerialConsole)
add_subdirectory(Signals)
add_subdirectory(Storage)
add_subdirectory(System)
add_subdirectory(Threads)
add_subdirectory(Utils)
