target_sources(PadOS_GUI PRIVATE
	Button.cpp
	ButtonBase.cpp
	ButtonGroup.cpp
	CheckBox.cpp
	Control.cpp
	GroupView.cpp
	ProgressBar.cpp
	RadioButton.cpp
	ScrollBar.cpp
	ScrollView.cpp
	Slider.cpp
	TabView.cpp
	TextBox.cpp
	TextEditView.cpp
	TextView.cpp
)

add_subdirectory(DropdownMenu)
add_subdirectory(ListView)
add_subdirectory(Menu)
